@@ -81,29 +81,44 @@ has github_url => (
     },
 );
 
-has extra_plugins => (
-    is       => 'ro',
-    isa      => 'ArrayRef[Str]',
-    init_arg => undef,
-    lazy     => 1,
-    default  => sub {
+has _plugins => (
+    is      => 'ro',
+    isa     => 'ArrayRef[Str]',
+    lazy    => 1,
+    default => sub {
         my $self = shift;
         [
-            'MetaConfig',
-            'MetaJSON',
-            'NextRelease',
-            'CheckChangesHasContent',
-            'PkgVersion',
-            'PodCoverageTests',
-            'PodSyntaxTests',
-            'NoTabsTests',
-            'EOLTests',
-            'CompileTests',
-            'Repository',
-            'Git::Check',
-            'Git::Tag',
-            'BumpVersionFromGit',
-            $self->is_task ? 'TaskWeaver' : 'PodWeaver',
+            qw(
+                GatherDir
+                PruneCruft
+                ManifestSkip
+                MetaYAML
+                License
+                Readme
+                ExtraTests
+                ExecDir
+                ShareDir
+                MakeMaker
+                Manifest
+                TestRelease
+                ConfirmRelease
+                MetaConfig
+                MetaJSON
+                NextRelease
+                CheckChangesHasContent
+                PkgVersion
+                PodCoverageTests
+                PodSyntaxTests
+                NoTabsTests
+                EOLTests
+                CompileTests
+                Repository
+                Git::Check
+                Git::Tag
+                BumpVersionFromGit
+            ),
+            ($self->is_task      ? 'TaskWeaver'  : 'PodWeaver'),
+            ($self->is_test_dist ? 'FakeRelease' : 'UploadToCPAN'),
         ]
     },
 );
@@ -150,19 +165,9 @@ around BUILDARGS => sub {
 sub configure {
     my $self = shift;
 
-    if ($self->is_test_dist) {
-        $self->add_bundle(
-            '@Filter' => { bundle => '@Basic', remove => ['UploadToCPAN'] }
-        );
-        $self->add_plugins('FakeRelease');
-    }
-    else {
-        $self->add_bundle('@Basic');
-    }
-
     $self->add_plugins(
         map { [ $_ => ($self->plugin_options->{$_} || {}) ] }
-            @{ $self->extra_plugins },
+            @{ $self->_plugins },
     );
 }
 
